exports[`test should render the ItemInfo 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="item-info">
    <styled.div>
        <span
            title="Diamond Select Marvel Select: Juggernaut Action Figure">
            Diamond Select Marvel Select: Juggernaut Action Figure
        </span>
    </styled.div>
    <div
        className="item-info__subtitle">
        <styled.div
            subheader={true}>
            <i
                className="fa fa-map-marker" />
            Genosha
        </styled.div>
        <styled.div
            subheader={true}>
            <i
                className="fa fa-heart" />
            80
             Likes
        </styled.div>
    </div>
    <div
        className="item-info__author">
        <a
            href="http://box.es/charlesxavier">
            <Unknown
                img="http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg" />
        </a>
        <div
            className="item-info__author__description">
            <div
                className="item-info__author__description__details">
                <styled.button
                    follow={true}>
                    Follow
                </styled.button>
                <p
                    className="item-info__author__description__details__name">
                    <a
                        href="http://box.es/charlesxavier">
                        Charles Xavier
                    </a>
                </p>
                <p
                    className="item-info__author__description__details__nickname">
                    xavier
                </p>
            </div>
            <styled.div>
                A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!
                <span
                    className="item-info__author__description__details__read-more">
                    ...
                    <a
                        href="#"
                        onClick={[Function]}>
                        read more
                    </a>
                </span>
            </styled.div>
        </div>
    </div>
</div>,
  "nodes": Array [
    <div
      className="item-info">
      <styled.div>
            <span
                  title="Diamond Select Marvel Select: Juggernaut Action Figure">
                  Diamond Select Marvel Select: Juggernaut Action Figure
            </span>
      </styled.div>
      <div
            className="item-info__subtitle">
            <styled.div
                  subheader={true}>
                  <i
                        className="fa fa-map-marker" />
                  Genosha
            </styled.div>
            <styled.div
                  subheader={true}>
                  <i
                        className="fa fa-heart" />
                  80
                   Likes
            </styled.div>
      </div>
      <div
            className="item-info__author">
            <a
                  href="http://box.es/charlesxavier">
                  <Unknown
                        img="http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg" />
            </a>
            <div
                  className="item-info__author__description">
                  <div
                        className="item-info__author__description__details">
                        <styled.button
                              follow={true}>
                              Follow
                        </styled.button>
                        <p
                              className="item-info__author__description__details__name">
                              <a
                                    href="http://box.es/charlesxavier">
                                    Charles Xavier
                              </a>
                        </p>
                        <p
                              className="item-info__author__description__details__nickname">
                              xavier
                        </p>
                  </div>
                  <styled.div>
                        A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!
                        <span
                              className="item-info__author__description__details__read-more">
                              ...
                              <a
                                    href="#"
                                    onClick={[Function]}>
                                    read more
                              </a>
                        </span>
                  </styled.div>
            </div>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Unknown
        item={
                Object {
                        "completeInfo": false,
                        "currency": Object {
                          "symbol": "$",
                        },
                        "description": "A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!",
                        "item_photos": Array [
                          Object {
                            "id": 473580,
                            "is_main": false,
                            "large": "https://images-na.ssl-images-amazon.com/images/I/719022GksTL._SL1500_.jpg",
                            "small": "https://images-na.ssl-images-amazon.com/images/I/719022GksTL._SL1500_.jpg",
                          },
                          Object {
                            "id": 473579,
                            "is_main": false,
                            "large": "http://www.angelfire.com/mech/jinsaotome/Blog/Juggyreview_001.JPG",
                            "small": "http://www.angelfire.com/mech/jinsaotome/Blog/Juggyreview_001.JPG",
                          },
                          Object {
                            "id": 473581,
                            "is_main": true,
                            "large": "https://actionfigurecanada.files.wordpress.com/2011/09/juggernaut-marvel-select-figure-2.jpg",
                            "small": "https://actionfigurecanada.files.wordpress.com/2011/09/juggernaut-marvel-select-figure-2.jpg",
                          },
                          Object {
                            "id": 473582,
                            "is_main": false,
                            "large": "http://4.bp.blogspot.com/-qNdk8wZtZSY/UgGmCHgBLJI/AAAAAAAB0pk/2qpwZTuNSls/s1600/52458-1.jpg",
                            "small": "http://4.bp.blogspot.com/-qNdk8wZtZSY/UgGmCHgBLJI/AAAAAAAB0pk/2qpwZTuNSls/s1600/52458-1.jpg",
                          },
                          Object {
                            "id": 473583,
                            "is_main": false,
                            "large": "https://s-media-cache-ak0.pinimg.com/originals/08/38/8f/08388f9c134afd90f567be95a4fe610b.jpg",
                            "small": "https://s-media-cache-ak0.pinimg.com/originals/08/38/8f/08388f9c134afd90f567be95a4fe610b.jpg",
                          },
                        ],
                        "likes_count": 80,
                        "location_details": "Genosha",
                        "name": "Diamond Select Marvel Select: Juggernaut Action Figure",
                        "price": 22.43,
                        "user": Object {
                          "avatar": Object {
                            "small_url": "http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg",
                          },
                          "name": "Charles Xavier",
                          "nickname": "xavier",
                          "share_url": "http://box.es/charlesxavier",
                        },
                      }
        }
        onClick={[Function]} />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "item": Object {
            "completeInfo": false,
            "currency": Object {
              "symbol": "$",
            },
            "description": "A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!",
            "item_photos": Array [
              Object {
                "id": 473580,
                "is_main": false,
                "large": "https://images-na.ssl-images-amazon.com/images/I/719022GksTL._SL1500_.jpg",
                "small": "https://images-na.ssl-images-amazon.com/images/I/719022GksTL._SL1500_.jpg",
              },
              Object {
                "id": 473579,
                "is_main": false,
                "large": "http://www.angelfire.com/mech/jinsaotome/Blog/Juggyreview_001.JPG",
                "small": "http://www.angelfire.com/mech/jinsaotome/Blog/Juggyreview_001.JPG",
              },
              Object {
                "id": 473581,
                "is_main": true,
                "large": "https://actionfigurecanada.files.wordpress.com/2011/09/juggernaut-marvel-select-figure-2.jpg",
                "small": "https://actionfigurecanada.files.wordpress.com/2011/09/juggernaut-marvel-select-figure-2.jpg",
              },
              Object {
                "id": 473582,
                "is_main": false,
                "large": "http://4.bp.blogspot.com/-qNdk8wZtZSY/UgGmCHgBLJI/AAAAAAAB0pk/2qpwZTuNSls/s1600/52458-1.jpg",
                "small": "http://4.bp.blogspot.com/-qNdk8wZtZSY/UgGmCHgBLJI/AAAAAAAB0pk/2qpwZTuNSls/s1600/52458-1.jpg",
              },
              Object {
                "id": 473583,
                "is_main": false,
                "large": "https://s-media-cache-ak0.pinimg.com/originals/08/38/8f/08388f9c134afd90f567be95a4fe610b.jpg",
                "small": "https://s-media-cache-ak0.pinimg.com/originals/08/38/8f/08388f9c134afd90f567be95a4fe610b.jpg",
              },
            ],
            "likes_count": 80,
            "location_details": "Genosha",
            "name": "Diamond Select Marvel Select: Juggernaut Action Figure",
            "price": 22.43,
            "user": Object {
              "avatar": Object {
                "small_url": "http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg",
              },
              "name": "Charles Xavier",
              "nickname": "xavier",
              "share_url": "http://box.es/charlesxavier",
            },
          },
          "onClick": [Function],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="item-info">
          <styled.div>
                    <span
                              title="Diamond Select Marvel Select: Juggernaut Action Figure">
                              Diamond Select Marvel Select: Juggernaut Action Figure
                    </span>
          </styled.div>
          <div
                    className="item-info__subtitle">
                    <styled.div
                              subheader={true}>
                              <i
                                        className="fa fa-map-marker" />
                              Genosha
                    </styled.div>
                    <styled.div
                              subheader={true}>
                              <i
                                        className="fa fa-heart" />
                              80
                               Likes
                    </styled.div>
          </div>
          <div
                    className="item-info__author">
                    <a
                              href="http://box.es/charlesxavier">
                              <Unknown
                                        img="http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg" />
                    </a>
                    <div
                              className="item-info__author__description">
                              <div
                                        className="item-info__author__description__details">
                                        <styled.button
                                                  follow={true}>
                                                  Follow
                                        </styled.button>
                                        <p
                                                  className="item-info__author__description__details__name">
                                                  <a
                                                            href="http://box.es/charlesxavier">
                                                            Charles Xavier
                                                  </a>
                                        </p>
                                        <p
                                                  className="item-info__author__description__details__nickname">
                                                  xavier
                                        </p>
                              </div>
                              <styled.div>
                                        A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!
                                        <span
                                                  className="item-info__author__description__details__read-more">
                                                  ...
                                                  <a
                                                            href="#"
                                                            onClick={[Function]}>
                                                            read more
                                                  </a>
                                        </span>
                              </styled.div>
                    </div>
          </div>
</div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="item-info">
          <styled.div>
                    <span
                              title="Diamond Select Marvel Select: Juggernaut Action Figure">
                              Diamond Select Marvel Select: Juggernaut Action Figure
                    </span>
          </styled.div>
          <div
                    className="item-info__subtitle">
                    <styled.div
                              subheader={true}>
                              <i
                                        className="fa fa-map-marker" />
                              Genosha
                    </styled.div>
                    <styled.div
                              subheader={true}>
                              <i
                                        className="fa fa-heart" />
                              80
                               Likes
                    </styled.div>
          </div>
          <div
                    className="item-info__author">
                    <a
                              href="http://box.es/charlesxavier">
                              <Unknown
                                        img="http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg" />
                    </a>
                    <div
                              className="item-info__author__description">
                              <div
                                        className="item-info__author__description__details">
                                        <styled.button
                                                  follow={true}>
                                                  Follow
                                        </styled.button>
                                        <p
                                                  className="item-info__author__description__details__name">
                                                  <a
                                                            href="http://box.es/charlesxavier">
                                                            Charles Xavier
                                                  </a>
                                        </p>
                                        <p
                                                  className="item-info__author__description__details__nickname">
                                                  xavier
                                        </p>
                              </div>
                              <styled.div>
                                        A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!
                                        <span
                                                  className="item-info__author__description__details__read-more">
                                                  ...
                                                  <a
                                                            href="#"
                                                            onClick={[Function]}>
                                                            read more
                                                  </a>
                                        </span>
                              </styled.div>
                    </div>
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Unknown
    item={
        Object {
            "completeInfo": false,
            "currency": Object {
              "symbol": "$",
            },
            "description": "A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!",
            "item_photos": Array [
              Object {
                "id": 473580,
                "is_main": false,
                "large": "https://images-na.ssl-images-amazon.com/images/I/719022GksTL._SL1500_.jpg",
                "small": "https://images-na.ssl-images-amazon.com/images/I/719022GksTL._SL1500_.jpg",
              },
              Object {
                "id": 473579,
                "is_main": false,
                "large": "http://www.angelfire.com/mech/jinsaotome/Blog/Juggyreview_001.JPG",
                "small": "http://www.angelfire.com/mech/jinsaotome/Blog/Juggyreview_001.JPG",
              },
              Object {
                "id": 473581,
                "is_main": true,
                "large": "https://actionfigurecanada.files.wordpress.com/2011/09/juggernaut-marvel-select-figure-2.jpg",
                "small": "https://actionfigurecanada.files.wordpress.com/2011/09/juggernaut-marvel-select-figure-2.jpg",
              },
              Object {
                "id": 473582,
                "is_main": false,
                "large": "http://4.bp.blogspot.com/-qNdk8wZtZSY/UgGmCHgBLJI/AAAAAAAB0pk/2qpwZTuNSls/s1600/52458-1.jpg",
                "small": "http://4.bp.blogspot.com/-qNdk8wZtZSY/UgGmCHgBLJI/AAAAAAAB0pk/2qpwZTuNSls/s1600/52458-1.jpg",
              },
              Object {
                "id": 473583,
                "is_main": false,
                "large": "https://s-media-cache-ak0.pinimg.com/originals/08/38/8f/08388f9c134afd90f567be95a4fe610b.jpg",
                "small": "https://s-media-cache-ak0.pinimg.com/originals/08/38/8f/08388f9c134afd90f567be95a4fe610b.jpg",
              },
            ],
            "likes_count": 80,
            "location_details": "Genosha",
            "name": "Diamond Select Marvel Select: Juggernaut Action Figure",
            "price": 22.43,
            "user": Object {
              "avatar": Object {
                "small_url": "http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg",
              },
              "name": "Charles Xavier",
              "nickname": "xavier",
              "share_url": "http://box.es/charlesxavier",
            },
          }
    }
    onClick={[Function]} />,
}
`;

exports[`test should render the ItemInfo with full description 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="item-info">
    <styled.div>
        <span
            title="Diamond Select Marvel Select: Juggernaut Action Figure">
            Diamond Select Marvel Select: Juggernaut Action Figure
        </span>
    </styled.div>
    <div
        className="item-info__subtitle">
        <styled.div
            subheader={true}>
            <i
                className="fa fa-map-marker" />
            Genosha
        </styled.div>
        <styled.div
            subheader={true}>
            <i
                className="fa fa-heart" />
            80
             Likes
        </styled.div>
    </div>
    <div
        className="item-info__author">
        <a
            href="http://box.es/charlesxavier">
            <Unknown
                img="http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg" />
        </a>
        <div
            className="item-info__author__description">
            <div
                className="item-info__author__description__details">
                <styled.button
                    follow={true}>
                    Follow
                </styled.button>
                <p
                    className="item-info__author__description__details__name">
                    <a
                        href="http://box.es/charlesxavier">
                        Charles Xavier
                    </a>
                </p>
                <p
                    className="item-info__author__description__details__nickname">
                    xavier
                </p>
            </div>
            <styled.div
                complete={true}>
                A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!
            </styled.div>
        </div>
    </div>
</div>,
  "nodes": Array [
    <div
      className="item-info">
      <styled.div>
            <span
                  title="Diamond Select Marvel Select: Juggernaut Action Figure">
                  Diamond Select Marvel Select: Juggernaut Action Figure
            </span>
      </styled.div>
      <div
            className="item-info__subtitle">
            <styled.div
                  subheader={true}>
                  <i
                        className="fa fa-map-marker" />
                  Genosha
            </styled.div>
            <styled.div
                  subheader={true}>
                  <i
                        className="fa fa-heart" />
                  80
                   Likes
            </styled.div>
      </div>
      <div
            className="item-info__author">
            <a
                  href="http://box.es/charlesxavier">
                  <Unknown
                        img="http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg" />
            </a>
            <div
                  className="item-info__author__description">
                  <div
                        className="item-info__author__description__details">
                        <styled.button
                              follow={true}>
                              Follow
                        </styled.button>
                        <p
                              className="item-info__author__description__details__name">
                              <a
                                    href="http://box.es/charlesxavier">
                                    Charles Xavier
                              </a>
                        </p>
                        <p
                              className="item-info__author__description__details__nickname">
                              xavier
                        </p>
                  </div>
                  <styled.div
                        complete={true}>
                        A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!
                  </styled.div>
            </div>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Unknown
        item={
                Object {
                        "completeInfo": true,
                        "currency": Object {
                          "symbol": "$",
                        },
                        "description": "A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!",
                        "item_photos": Array [
                          Object {
                            "id": 473580,
                            "is_main": false,
                            "large": "https://images-na.ssl-images-amazon.com/images/I/719022GksTL._SL1500_.jpg",
                            "small": "https://images-na.ssl-images-amazon.com/images/I/719022GksTL._SL1500_.jpg",
                          },
                          Object {
                            "id": 473579,
                            "is_main": false,
                            "large": "http://www.angelfire.com/mech/jinsaotome/Blog/Juggyreview_001.JPG",
                            "small": "http://www.angelfire.com/mech/jinsaotome/Blog/Juggyreview_001.JPG",
                          },
                          Object {
                            "id": 473581,
                            "is_main": true,
                            "large": "https://actionfigurecanada.files.wordpress.com/2011/09/juggernaut-marvel-select-figure-2.jpg",
                            "small": "https://actionfigurecanada.files.wordpress.com/2011/09/juggernaut-marvel-select-figure-2.jpg",
                          },
                          Object {
                            "id": 473582,
                            "is_main": false,
                            "large": "http://4.bp.blogspot.com/-qNdk8wZtZSY/UgGmCHgBLJI/AAAAAAAB0pk/2qpwZTuNSls/s1600/52458-1.jpg",
                            "small": "http://4.bp.blogspot.com/-qNdk8wZtZSY/UgGmCHgBLJI/AAAAAAAB0pk/2qpwZTuNSls/s1600/52458-1.jpg",
                          },
                          Object {
                            "id": 473583,
                            "is_main": false,
                            "large": "https://s-media-cache-ak0.pinimg.com/originals/08/38/8f/08388f9c134afd90f567be95a4fe610b.jpg",
                            "small": "https://s-media-cache-ak0.pinimg.com/originals/08/38/8f/08388f9c134afd90f567be95a4fe610b.jpg",
                          },
                        ],
                        "likes_count": 80,
                        "location_details": "Genosha",
                        "name": "Diamond Select Marvel Select: Juggernaut Action Figure",
                        "price": 22.43,
                        "user": Object {
                          "avatar": Object {
                            "small_url": "http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg",
                          },
                          "name": "Charles Xavier",
                          "nickname": "xavier",
                          "share_url": "http://box.es/charlesxavier",
                        },
                      }
        }
        onClick={[Function]} />,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "item": Object {
            "completeInfo": true,
            "currency": Object {
              "symbol": "$",
            },
            "description": "A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!",
            "item_photos": Array [
              Object {
                "id": 473580,
                "is_main": false,
                "large": "https://images-na.ssl-images-amazon.com/images/I/719022GksTL._SL1500_.jpg",
                "small": "https://images-na.ssl-images-amazon.com/images/I/719022GksTL._SL1500_.jpg",
              },
              Object {
                "id": 473579,
                "is_main": false,
                "large": "http://www.angelfire.com/mech/jinsaotome/Blog/Juggyreview_001.JPG",
                "small": "http://www.angelfire.com/mech/jinsaotome/Blog/Juggyreview_001.JPG",
              },
              Object {
                "id": 473581,
                "is_main": true,
                "large": "https://actionfigurecanada.files.wordpress.com/2011/09/juggernaut-marvel-select-figure-2.jpg",
                "small": "https://actionfigurecanada.files.wordpress.com/2011/09/juggernaut-marvel-select-figure-2.jpg",
              },
              Object {
                "id": 473582,
                "is_main": false,
                "large": "http://4.bp.blogspot.com/-qNdk8wZtZSY/UgGmCHgBLJI/AAAAAAAB0pk/2qpwZTuNSls/s1600/52458-1.jpg",
                "small": "http://4.bp.blogspot.com/-qNdk8wZtZSY/UgGmCHgBLJI/AAAAAAAB0pk/2qpwZTuNSls/s1600/52458-1.jpg",
              },
              Object {
                "id": 473583,
                "is_main": false,
                "large": "https://s-media-cache-ak0.pinimg.com/originals/08/38/8f/08388f9c134afd90f567be95a4fe610b.jpg",
                "small": "https://s-media-cache-ak0.pinimg.com/originals/08/38/8f/08388f9c134afd90f567be95a4fe610b.jpg",
              },
            ],
            "likes_count": 80,
            "location_details": "Genosha",
            "name": "Diamond Select Marvel Select: Juggernaut Action Figure",
            "price": 22.43,
            "user": Object {
              "avatar": Object {
                "small_url": "http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg",
              },
              "name": "Charles Xavier",
              "nickname": "xavier",
              "share_url": "http://box.es/charlesxavier",
            },
          },
          "onClick": [Function],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="item-info">
          <styled.div>
                    <span
                              title="Diamond Select Marvel Select: Juggernaut Action Figure">
                              Diamond Select Marvel Select: Juggernaut Action Figure
                    </span>
          </styled.div>
          <div
                    className="item-info__subtitle">
                    <styled.div
                              subheader={true}>
                              <i
                                        className="fa fa-map-marker" />
                              Genosha
                    </styled.div>
                    <styled.div
                              subheader={true}>
                              <i
                                        className="fa fa-heart" />
                              80
                               Likes
                    </styled.div>
          </div>
          <div
                    className="item-info__author">
                    <a
                              href="http://box.es/charlesxavier">
                              <Unknown
                                        img="http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg" />
                    </a>
                    <div
                              className="item-info__author__description">
                              <div
                                        className="item-info__author__description__details">
                                        <styled.button
                                                  follow={true}>
                                                  Follow
                                        </styled.button>
                                        <p
                                                  className="item-info__author__description__details__name">
                                                  <a
                                                            href="http://box.es/charlesxavier">
                                                            Charles Xavier
                                                  </a>
                                        </p>
                                        <p
                                                  className="item-info__author__description__details__nickname">
                                                  xavier
                                        </p>
                              </div>
                              <styled.div
                                        complete={true}>
                                        A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!
                              </styled.div>
                    </div>
          </div>
</div>,
        "_debugID": 4,
        "_renderedOutput": <div
          className="item-info">
          <styled.div>
                    <span
                              title="Diamond Select Marvel Select: Juggernaut Action Figure">
                              Diamond Select Marvel Select: Juggernaut Action Figure
                    </span>
          </styled.div>
          <div
                    className="item-info__subtitle">
                    <styled.div
                              subheader={true}>
                              <i
                                        className="fa fa-map-marker" />
                              Genosha
                    </styled.div>
                    <styled.div
                              subheader={true}>
                              <i
                                        className="fa fa-heart" />
                              80
                               Likes
                    </styled.div>
          </div>
          <div
                    className="item-info__author">
                    <a
                              href="http://box.es/charlesxavier">
                              <Unknown
                                        img="http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg" />
                    </a>
                    <div
                              className="item-info__author__description">
                              <div
                                        className="item-info__author__description__details">
                                        <styled.button
                                                  follow={true}>
                                                  Follow
                                        </styled.button>
                                        <p
                                                  className="item-info__author__description__details__name">
                                                  <a
                                                            href="http://box.es/charlesxavier">
                                                            Charles Xavier
                                                  </a>
                                        </p>
                                        <p
                                                  className="item-info__author__description__details__nickname">
                                                  xavier
                                        </p>
                              </div>
                              <styled.div
                                        complete={true}>
                                        A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!
                              </styled.div>
                    </div>
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Unknown
    item={
        Object {
            "completeInfo": true,
            "currency": Object {
              "symbol": "$",
            },
            "description": "A Diamond Select Release! Sculpted by Gentle Giant! The ranks of the best-selling Marvel Select line expand to include one of the most deadly mutants ever, the unstoppable Juggernaut. Sculpted by Gentle Giant and standing a massive 7\" tall, Juggernaut is the latest in the, in scale, over sized figures from the Marvel Select line. Charles Xavier\'s half brother is ready to join Magneto in the fight against the X-Men and anyone else that stands in their way. Featuring Marvel Selects standard 16 points of articulation, Juggernaut, and the sans-helmet chase variant figure, are the textbook definition of Unstoppable!",
            "item_photos": Array [
              Object {
                "id": 473580,
                "is_main": false,
                "large": "https://images-na.ssl-images-amazon.com/images/I/719022GksTL._SL1500_.jpg",
                "small": "https://images-na.ssl-images-amazon.com/images/I/719022GksTL._SL1500_.jpg",
              },
              Object {
                "id": 473579,
                "is_main": false,
                "large": "http://www.angelfire.com/mech/jinsaotome/Blog/Juggyreview_001.JPG",
                "small": "http://www.angelfire.com/mech/jinsaotome/Blog/Juggyreview_001.JPG",
              },
              Object {
                "id": 473581,
                "is_main": true,
                "large": "https://actionfigurecanada.files.wordpress.com/2011/09/juggernaut-marvel-select-figure-2.jpg",
                "small": "https://actionfigurecanada.files.wordpress.com/2011/09/juggernaut-marvel-select-figure-2.jpg",
              },
              Object {
                "id": 473582,
                "is_main": false,
                "large": "http://4.bp.blogspot.com/-qNdk8wZtZSY/UgGmCHgBLJI/AAAAAAAB0pk/2qpwZTuNSls/s1600/52458-1.jpg",
                "small": "http://4.bp.blogspot.com/-qNdk8wZtZSY/UgGmCHgBLJI/AAAAAAAB0pk/2qpwZTuNSls/s1600/52458-1.jpg",
              },
              Object {
                "id": 473583,
                "is_main": false,
                "large": "https://s-media-cache-ak0.pinimg.com/originals/08/38/8f/08388f9c134afd90f567be95a4fe610b.jpg",
                "small": "https://s-media-cache-ak0.pinimg.com/originals/08/38/8f/08388f9c134afd90f567be95a4fe610b.jpg",
              },
            ],
            "likes_count": 80,
            "location_details": "Genosha",
            "name": "Diamond Select Marvel Select: Juggernaut Action Figure",
            "price": 22.43,
            "user": Object {
              "avatar": Object {
                "small_url": "http://static.comicvine.com/uploads/original/7/71941/1489898-charles_xavier.jpg",
              },
              "name": "Charles Xavier",
              "nickname": "xavier",
              "share_url": "http://box.es/charlesxavier",
            },
          }
    }
    onClick={[Function]} />,
}
`;
